--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,5 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify
-        working-directory: aluabook
+        run: hugo
         
