--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,49 +5,32 @@ on:
       - cron: '0 22 * * *'
   watch:
       types: [started]
-
+  push:
+    branches:
+      - main    
         
+      
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  deploy: #执行部署Hugo生成静态代码，默认放在gh-pages分支
+    runs-on: ubuntu-18.04
     if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node-version: [15.x]
-
     steps:
       - uses: actions/checkout@v2
         with:
-          submodules: true  # Fetch any Git submodules (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install JS dependencies
-        run: rm -rf node_modules && yarn install --frozen-lockfile
-
-      - name: Check for linting errors
-        run: yarn run lint
-
-
-  hugo:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true  # Fetch any Git submodules (true OR recursive)
+          submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.89.4'
-          extended: true
+          hugo-version: '0.90.1'
+          extended: true #不需要extended版本就可以注释
 
-      - name: Build
+      - name: Build github
         run: hugo
-        
+
+  
+
+
+      
+
