--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/02/0202layout.md",
+            "file": "_index.md",
             "mode": "source",
             "source": false
           }
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/02/0202layout.md",
+                "file": "_index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,6 +101,7 @@
   },
   "active": "5d55494fb6a1488d",
   "lastOpenFiles": [
+    "_index.md",
     "docs/02/0202layout.md",
     "docs/02/0201string.md",
     "docs/03/0301when.md",
@@ -109,7 +110,6 @@
     "docs/03/0304string.md",
     "docs/03/0303LuaWebViewzidingyi.md",
     "docs/03/_index.md",
-    "docs/_index.md",
-    "_index.md"
+    "docs/_index.md"
   ]
 }
