--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_index.md",
+            "file": "docs/03/0301.md",
             "mode": "source",
             "source": false
           }
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/02/0201string.md",
+            "file": "docs/03/_index.md",
             "mode": "source",
             "source": false
           }
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_index.md",
+                "file": "docs/03/0301.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,15 +101,15 @@
   },
   "active": "5d55494fb6a1488d",
   "lastOpenFiles": [
-    "_index.md",
-    "docs/02/0202layout.md",
-    "docs/02/0201string.md",
-    "docs/03/0301when.md",
-    "posts/creating-a-new-theme.md",
-    "docs/02/_index.md",
-    "docs/03/0304string.md",
-    "docs/03/0303LuaWebViewzidingyi.md",
+    "docs/03/0301.md",
     "docs/03/_index.md",
-    "docs/_index.md"
+    "docs/02/0201string.md",
+    "docs/02/_index.md",
+    "docs/02/0202layout.md",
+    "docs/01/0101sudo.md",
+    "docs/01/0102alua.md",
+    "docs/05/_index.md",
+    "docs/01/_index.md",
+    "_index.md"
   ]
 }
