--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -9,11 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-<<<<<<< HEAD
             "file": "docs/03/0301.md",
-=======
-            "file": "docs/03/_index.md",
->>>>>>> 7a3bd0b (upload)
             "mode": "source",
             "source": false
           }
@@ -23,17 +19,12 @@
         "id": "eacb19f0522c6b73",
         "type": "leaf",
         "state": {
-<<<<<<< HEAD
           "type": "markdown",
           "state": {
             "file": "docs/03/_index.md",
             "mode": "source",
             "source": false
           }
-=======
-          "type": "empty",
-          "state": {}
->>>>>>> 7a3bd0b (upload)
         }
       }
     ],
@@ -90,11 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-<<<<<<< HEAD
-                "file": "docs/03/0301.md",
-=======
                 "file": "docs/03/_index.md",
->>>>>>> 7a3bd0b (upload)
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,30 +99,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "5d55494fb6a1488d",
+  "active": "eacb19f0522c6b73",
   "lastOpenFiles": [
-<<<<<<< HEAD
+    "docs/03/_index.md",
     "docs/03/0301.md",
-    "docs/03/_index.md",
-    "docs/02/0201string.md",
-    "docs/02/_index.md",
-    "docs/02/0202layout.md",
-    "docs/01/0101sudo.md",
-    "docs/01/0102alua.md",
-    "docs/05/_index.md",
-    "docs/01/_index.md",
-    "_index.md"
-=======
-    "docs/03/_index.md",
-    "docs/02/_index.md",
     "posts/02RES.md",
     "posts/01NEW.md",
-    "posts/_index.md",
-    "docs/_index.md",
-    "docs/04/0401when.md",
     "docs/04/0411Animation.md",
     "docs/04/0410file.md",
-    "docs/04/0409sthing.md"
->>>>>>> 7a3bd0b (upload)
+    "docs/04/0409sthing.md",
+    "docs/04/0408sent.md",
+    "docs/04/0407caculate.md",
+    "docs/04/0406system.md"
   ]
 }
